--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
             />
             <button class="form-button-search">Search</button>
           </form>
-          <div>
-            <ul class="social-network-row">
+          <ul class="social-row">
               <li><img src="./src/images/bx_bxl-facebook.png" alt="png" /></li>
               <li><img src="./src/images/bx_bxl-instagram.png" alt="png" /></li>
               <li><img src="./src/images/bx_bxl-twitter.png" alt="png" /></li>
             </ul>
           </div>
-        </div>
       </section>
-      <section>
+      <section class="hero">
         <div class="container">
           <h2 class="tools-link-h2">Most Popular Tools</h2>
           <p class="tools-text">
@@ -87,7 +85,7 @@
             the world
           </p>
           <ul class="tools-hero-row">
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -116,7 +114,7 @@
               </div>
               </div>
             </li>
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -145,7 +143,7 @@
                </div>
               </div>
             </li>
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -174,7 +172,7 @@
                </div>
               </div>
             </li>
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -203,7 +201,7 @@
                </div>
               </div>
             </li>
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -232,7 +230,7 @@
                </div>
               </div>
             </li>
-            <li>
+            <li class="tools-hero-row-items">
               <div class="program-tools">
                 <div class="title-pay-container">
                   <img
@@ -265,7 +263,7 @@
           <button class="hero-button-load">Load more</button>
         </div>
       </section>
-      <section>
+      <section class="section-brend">
         <div class="container">
         <div class="brand-container">
           <h3 class="brand-title">Trusted more than 150+ brand</h3>
@@ -419,7 +417,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="section-ronald">
         <div class="container">
         <div class="ronald-flexbox">
           <img
@@ -462,7 +460,7 @@
       </div>
     </div>
       </section>
-      <section>
+      <section class="section-contributor">
         <div class="container">
           <h6 class="contributor-title">Become a contributor?</h6>
           <p class="contributor-text">
@@ -478,6 +476,7 @@
             <button class="contributor-email-button-join">Join Us</button>
           </form>
         </div>
+        
       </section>
       <div class="before-footer-line"></div>
     </main>
@@ -495,6 +494,7 @@
               and Development toolsv
             </p>
           </div>
+          <div class="footer-info">
           <div class="footer-contact">
             <p class="contact-title">Contact Us</p>
             <address>
@@ -531,6 +531,7 @@
             </ul>
           </div>
         </div>
+      </div>
       </div>
     </footer>
   </body>
